--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,12 @@
 site_name: Pluggedspace Docs
 theme:
   name: material
+  theme:
+  name: material
+  logo: images/Pluggedspace.png
+  favicon: images/Pluggedspace.png
 
+  
 nav:
   - Home: index.md
   - Monica:
