--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,14 @@ extra:
   social:
     - icon: fontawesome/brands/twitter
       link: https://twitter.com/pluggedspace_io
+    - icon: fontawesome/brands/instagram
+      link: https://instagram.com/pluggedspace
+    - icon: fontawesome/brands/linkedin
+      link: https://linkedin.com/company/pluggedspace
+    - icon: fontawesome/brands/github
+      link: https://github.com/pluggedspace
+    - icon: fontawesome/solid/envelope
+      link: mailto:contact@pluggedspace.org
     - icon: fontawesome/solid/globe
       link: https://pluggedspace.org
     - icon: fontawesome/solid/book
