Add navigation entries for Atlas and Match Predictor

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,5 +38,9 @@ extra:
 
 nav:
   - Home: index.md
+  - Atlas:
+      - Overview: data/index.md
   - Job Autobot:
       - Overview: models/job/index.md
+  - Match Predictor:
+      - Overview: models/match/index.md
