--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ site_url: https://docs.pluggedspace.org
 theme:
   name: material
   logo: images/Pluggedspace.png
-  favicon: images/Pluggedspace.png
+  favicon: images/favicon.ico
   palette:
     - scheme: default
       primary: black
