--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Pluggedspace Docs
-site_description: Official documentation for Pluggedspace's unified SaaS tools, including Monica, DRAC, KYC Engine, and more.
+site_description: Official documentation for Pluggedspace's unified tools.
 site_url: https://docs.pluggedspace.org
 
 theme:
